@@ -1,3 +1,14 @@
+2018-10-03  Michael Catanzaro  <mcatanzaro@igalia.com>
+
+        -Wunused-variable in RenderLayer::updateScrollableAreaSet
+        https://bugs.webkit.org/show_bug.cgi?id=190200
+
+        Reviewed by Yusuke Suzuki.
+
+        Add a new UNUSED_VARIABLE() macro. It's the same as UNUSED_PARAM(), just named differently.
+
+        * wtf/Compiler.h:
+
 2018-10-01  Dean Jackson  <dino@apple.com>
 
         [macOS] Switching to discrete GPU should be done in the UI process
